# randomart

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  out.txt  spiderman.txt
benches/: a.rs
data/metadata/: 131120242325.metadata  141120240003.metadata  141120240007.metadata  141120240009.metadata  14112024000945.metadata  141120240010.metadata  141120240011.metadata  141120240012.metadata  141120240017.metadata  141120240028.metadata  141120240040.metadata  141120240043.metadata  141120240046.metadata  141120240047.metadata  141120240049.metadata  141120240051.metadata  141120240053.metadata  141120240054.metadata  141120240058.metadata  141120240103.metadata  141120240104.metadata  141120241450.metadata  141120241621.metadata
data/metal/: randomart_shader.metal  randomart_spiderman_2.metallib  run_art
data/randomart_spec_lang/: spiderman.txt  spiderman_2.txt
docs/: randomart_spec_lang.md
randomart-cli/: Cargo.toml
randomart-cli/src/: lib.rs  main.rs
randomart-closure-tree/: Cargo.toml
randomart-closure-tree/src/: lib.rs  main.rs  utils.rs
randomart-core/: Cargo.toml  build.rs
randomart-core/src/: grammar.rs  lib.rs  math.rs  node.rs  pixel_buffer.rs  render.rs  rng.rs  statistics.rs
randomart-cranelift-jit/: Cargo.toml
randomart-cranelift-jit/src/: grammar.rs  jit.rs  lib.rs  main.rs  render.rs
randomart-llvm-aot/: Cargo.toml  build.rs
randomart-llvm-aot/src/: lib.rs
randomart-metal/: Cargo.toml  Makefile  README.md
randomart-metal/src/: gpu.rs  lib.rs  main.rs  metal_codegen.rs  node.rs  reader.rs  rng.rs  statistics.rs
randomart-tests/: Cargo.toml
randomart-tests/tests/: correctness.rs  ftz.rs  invariants.rs
randomart_cargo/: Cargo.toml  build.rs
randomart_cargo/benches/: a.rs
randomart_cargo/randomart_core/: Cargo.toml
randomart_cargo/randomart_core/src/: lib.rs  utils.rs
randomart_cargo/randomart_fn_gen_macro/: Cargo.toml
randomart_cargo/src/: main.rs
randomart_core/: Cargo.toml
randomart_core/src/: grammar.rs  utils.rs
randomart_fn_gen_macro/src/: lib.rs
randomart_spec_lang_reader/: Cargo.toml  output.txt  spiderman.txt
randomart_spec_lang_reader/src/: lib.rs  main.rs  reader.rs
randomart_standalone/: Cargo.toml  My brain on drugs.txt  out  out.txt
randomart_standalone/src/: closure_tree.rs  grammar.rs  jit.rs  lib.rs  main.rs  node.rs  reader.rs  statistics.rs  utils.rs
src/: grammar.rs  jit.rs  legacy.rs  lib.rs  main.rs  main.swift  math.rs  metal_codegen.rs  node.rs  reader.rs  statistics.rs  utils.rs
