[package]
name = "randomart"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
randomart_fn_gen_macro = { path = "randomart_fn_gen_macro" } 
randomart_core = { path = "randomart_core" }

[build-dependencies]
randomart_core = { path = "randomart_core" }

[dev-dependencies]
criterion = "=0.5.1"

[[bench]]
name = "a"
harness = false

[profile.release]
lto = true