[package]
name = "randomart-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "randomart-metal"
path = "src/bin/randomart-metal.rs"

[[bin]]
name = "randomart-cranelift"
path = "src/bin/randomart-cranelift.rs"

[[bin]]
name = "randomart-closure-tree"
path = "src/bin/randomart-closure-tree.rs"

[dependencies]
randomart-core = { path = "../randomart-core" }
randomart-metal = { path = "../randomart-metal" }
randomart-cranelift-jit = { path = "../randomart-cranelift-jit" }
randomart-closure-tree = { path = "../randomart-closure-tree" }
clap = { version = "4", features = ["derive"] }
image = "0.25.6"
