[package]
name = "randomart-cranelift-jit"
version = "0.1.0"
edition = "2024"

[features]
no-extern-c = []
native-ops = []
debug-ir = []

[dependencies]
randomart-core = { path = "../randomart-core" }
cranelift = "0.119.0"
cranelift-jit = "0.119"
cranelift-module = "0.119"
serde_json = "1"
rayon = "1.10.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }