[package]
name = "randomart-metal"
version = "0.1.0"
edition = "2021"

[dependencies]
randomart-core = { path = "../randomart-core" }
serde_json = "1"
rayon = "1.10.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tempfile = "3.27.0"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSURL", "NSError", "NSObject"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
objc2-metal = { version = "0.3.2", features = [
    "MTLAllocation",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDevice",
    "MTLLibrary",
    "MTLPixelFormat",
    "MTLResource",
    "MTLTexture",
    "MTLTypes",
] }
